--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nan": "^2.18.0",
     "nano": "^10.1.2",
-    "telebot": "^1.4.1",
-    "telegraf": "^4.14.0",
-    "telegraf-session-local": "^2.1.1",
-    "ts-node": "^10.9.1",
-    "tsc": "^2.0.4"
+    "telegraf": "^4.14.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
@@ -26,6 +21,8 @@
     "@types/node": "^20.8.2",
     "@types/node-fetch": "^2.6.6",
     "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "tsc": "^2.0.4",
     "typegram": "^5.2.0"
   }
 }
