feat: scripts, readme update

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "start:unix": "concurrently \"npm run start:server\" \"npm run start:webUnix\"",
     "start:win32": "concurrently \"npm run start:server\" \" npm run start:webWin32\"",
     "start:server": "cd server/src && ts-node index.ts",
-    "start:webWin32": "cd web-app && set HTTPS=true&& npm start",
-    "start:webUnix": "cd web-app && HTTPS=true npm start"
+    "start:webWin32": "cd web-app && set HTTPS=true&& npm run start_webapp",
+    "start:webUnix": "cd web-app && HTTPS=true npm run start_webapp"
   },
   "devDependencies": {
     "concurrently": "^8.2.1"
